# Nova-2048

./: Cargo.toml  README.md
examples/: game_2048.rs
src/: can_move.rs  direction_chooser.rs  game_2048.rs  gen_next.rs  lib.rs  merge.rs  restore.rs  sort.rs
