[package]
name = "nova-2048"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nova-snark = "0.31.0"
bellpepper-core = { version="0.4.0", default-features = false }
ff = { version = "0.13.0", features = ["derive"] }

[dev-dependencies]
blstrs = "0.7.1"